# helpdesk-ai

./: .env.example  .gitignore  README.md  helpdesk_ai.md  helpdesk_dump.sql  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 879b53d74f82_baseline_align_with_existing_schema.py  b47d9a1e6c33_fix_tickets_timestamp_timezones.py  c58ea2f7d144_create_password_reset_tokens_table.py  f82e0efdccbe_rename_comments_columns.py
backend/: main.py
backend/api/: deps.py
backend/core/: config.py  database.py  email.py  exceptions.py  logging_config.py  middleware.py  rate_limit.py  security.py
backend/models/: __init__.py  attachment.py  base.py  comment.py  department.py  password_reset_token.py  role.py  sla_policy.py  ticket.py  ticket_history.py  user.py
backend/repositories/: base.py  comment_repository.py  password_reset_token_repository.py  sla_policy_repository.py  ticket_repository.py  user_repository.py
backend/schemas/: auth.py  comment.py  common.py  sla_policy.py  ticket.py  token.py  user.py
backend/services/: auth_service.py  comment_service.py  dashboard_service.py  report_service.py  sla_policy_service.py  ticket_service.py  user_service.py
backend/utils/: password_validator.py
database/: README.md
database/migrations/: 001_create_enums.sql  002_create_roles_table.sql  003_create_departments_table.sql  004_create_users_table.sql  005_create_sla_policies_table.sql  006_create_tickets_table.sql  007_create_comments_table.sql  008_create_attachments_table.sql  009_create_ticket_history_table.sql  010_create_indexes.sql  011_fix_tickets_timestamp_timezones.sql  012_create_password_reset_tokens_table.sql
database/seeds/: 001_seed_roles.sql  (+3 more)
docker/: docker-compose.test.yml
frontend/: api_client.py  app.py
ml/: service.py
scripts/: generate_admin_password.py
(+37 files in other folders)
